      installation (since all packages are now lazy-loaded).  This can
      be controlled on a per-package basis by the optional field
      \samp{ByteCompile} in the \file{DESCRIPTION} file.

      \item Packages without explicit \file{NAMESPACE} files will have
      a default one created at build or INSTALL time, so all packages
      will have namespaces.  A consequence of this is that
      \code{.First.lib} functions need to be renamed, usually as
      \code{.onLoad} but sometimes as \code{.onAttach}.      
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} now gives an error if the \R code in a
      vignette fails to run, unless this is caused by a missing package.

      It now unpacks tarballs in the same way as \command{R CMD
	INSTALL}, including making use of the environment variable
      \env{R_INSTALL_TAR} to override the default behaviour.

      \item The default for the environment variable
      \env{_R_CHECK_COMPACT_DATA2_} is now true, so if using the newer
      forms of compression introduced in \R 2.10.0 would be beneficial
      is checked by default.

      \item \command{R CMD Rd2dvi} allows the use of LaTeX package
      \samp{inputenx} rather than \samp{inputenc}: the value of the
      environment variable \env{RD2DVI_INPUTENC} is used.  (LaTeX package
      \samp{inputenx} is an optional install which provides greater
      coverage of the UTF-8 encoding.)

      \item \command{Rscript} on a Unix-alike now accepts file names
      containing spaces (if these are escaped or quoted in the shell).

      \item \command{R CMD build} on a Unix-alike (only) now tries to
      preserve dates on files it copies from its input directory.  (This
      was the undocumented behaviour prior to \R 2.13.0.)
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
   \itemize{
      \item \code{require()} no longer has a \code{save} argument.

      \item The \code{gamma} argument to \code{hsv()},